  be positive definite, so in gradient descent, this negative metric term need to be considered, the optional paramter
  =trivial_metric= is used to apply the trivial metric when conjugating.
+ *TAT.py*: Update the new interface of =conjugate=.
+ *TAT.py*: Use customized string stream in =TAT.py= to avoid a duplicated copy of string.
*** Deprecated
*** Removed
+ *TAT.hpp*: Remove deprecated tensor member function =get_rank=, =find_rank_from_name= and =get_rank_from_name=.
*** Fixed
+ *TAT.hpp*: Fix a bug about parity sign when =merge_map= is empty.
+ *TAT.hpp*: Fix invalid access to a empty =vector= when splitting the first edge into zero edges.
+ *TAT.hpp*: Fix out of range pointer error when try to split a trivial edge ={{Symmetry(), 1}}= to no edge, or merge no
  edge into a trivial edge.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.6...v0.3.7][v0.3.7]] - 2023-08-15

*** Added
+ *tetragono*: Add support to calculate deviation of the observer set as a whole, which is useful since many observables
  are the summation of several local observables.
+ *tetragono*: Add arguments support for =gm_conf_create= and =ap_conf_create= in tetragono shell.
+ *tetragono*: Add a member dict called =attribute= to =AbstractState=, which may contain customed data used by user.
*** Changed
+ *tetragono*: =save_result= accept another parameter, which is the total result of the whole observers set. Its
  signature is =state=, =result=, =whole_result= and =step= now.
+ *tetraku*: Change the defnition of x/y/z link in kitaev model. The bond inside one tensor is z link now.
+ *tetragono*: =gm_run(_g)= will now return/yield all the measurement result instead of energy only.
*** Deprecated
+ *tetragono*: The previous signature of =save_result=: =state=, =result= and =step= is deprecated.
*** Removed
+ *tetragono*: Remove the deprecated function =natural_gradient= and the deprecated paramter =metric_inverse_epsilon=
  for =gm_run=.
