@@ -5,6 +5,7 @@
 using namespace testing;
 
 // The current strategy for matrix matrix product is:
+// If tensor_1 is larger than tensor_2, check tensor_1 first, otherwise check tensor_2 first.
 // If free_name_1[-1] != name_1[-1], aka, tensor_1 last edge will be contracted:
 //   Fit common name by tensor1
 //   Put common of tensor1 to right
@@ -19,27 +20,39 @@ using namespace testing;
 // For matrix vector product, The strategy is:
 //   Fit the common edge by matrix's common edge since it is larger.
 //   Put common of matrix to right? -> common_name_matrix[-1] == name_matrix[-1]
-TEST(test_contract_order, no_symmetry_matrix_matrix_by_left) {
-   auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {2, 2}}.range();
+TEST(test_contract_order, no_symmetry_matrix_matrix_better_left_by_left) {
+   auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {3, 2}}.range();
    auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {2, 2}}.range();
    auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"B", "C"}});
 }
 
-TEST(test_contract_order, no_symmetry_matrix_matrix_by_right) {
+TEST(test_contract_order, no_symmetry_matrix_matrix_better_left_by_right) {
    auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {2, 2}}.range();
+   auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {2, 3}}.range();
+   auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"B", "C"}});
+}
+
+TEST(test_contract_order, no_symmetry_matrix_matrix_better_right_by_left) {
+   auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {2, 3}}.range();
    auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {2, 2}}.range();
    auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"A", "D"}});
 }
 
-TEST(test_contract_order, no_symmetry_matrix_matrix_both_bad_by_right) {
+TEST(test_contract_order, no_symmetry_matrix_matrix_better_right_by_right) {
    auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {2, 2}}.range();
-   auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {2, 3}}.range();
-   auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"A", "C"}});
+   auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {3, 2}}.range();
+   auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"A", "D"}});
 }
 
 TEST(test_contract_order, no_symmetry_matrix_matrix_both_bad_by_left) {
    auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {2, 3}}.range();
    auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {2, 2}}.range();
+   auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"A", "C"}});
+}
+
+TEST(test_contract_order, no_symmetry_matrix_matrix_both_bad_by_right) {
+   auto a = TAT::Tensor<double, TAT::NoSymmetry>{{"A", "B"}, {2, 2}}.range();
+   auto b = TAT::Tensor<double, TAT::NoSymmetry>{{"C", "D"}, {2, 3}}.range();
    auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"A", "C"}});
 }
 
@@ -55,27 +68,39 @@ TEST(test_contract_order, no_symmetry_vector_matrix) {
    auto c = TAT::Tensor<double, TAT::NoSymmetry>::contract(a, b, {{"A", "C"}});
 }
 
-TEST(test_contract_order, z2_symmetry_matrix_matrix_by_left) {
-   auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
+TEST(test_contract_order, z2_symmetry_matrix_matrix_better_left_by_left) {
+   auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 3}, {true, 3}}, {{false, 2}, {true, 2}}}}.range();
    auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
    auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"B", "C"}});
 }
 
-TEST(test_contract_order, z2_symmetry_matrix_matrix_by_right) {
+TEST(test_contract_order, z2_symmetry_matrix_matrix_better_left_by_right) {
    auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
+   auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 2}, {true, 2}}, {{false, 3}, {true, 3}}}}.range();
+   auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"B", "C"}});
+}
+
+TEST(test_contract_order, z2_symmetry_matrix_matrix_better_right_by_left) {
+   auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 2}, {true, 2}}, {{false, 3}, {true, 3}}}}.range();
    auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
    auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"A", "D"}});
 }
 
-TEST(test_contract_order, z2_symmetry_matrix_matrix_both_bad_by_right) {
+TEST(test_contract_order, z2_symmetry_matrix_matrix_better_right_by_right) {
    auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
-   auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 2}, {true, 2}}, {{false, 3}, {true, 3}}}}.range();
-   auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"A", "C"}});
+   auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 3}, {true, 3}}, {{false, 2}, {true, 2}}}}.range();
+   auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"A", "D"}});
 }
 
 TEST(test_contract_order, z2_symmetry_matrix_matrix_both_bad_by_left) {
    auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 2}, {true, 2}}, {{false, 3}, {true, 3}}}}.range();
    auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
+   auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"A", "C"}});
+}
+
+TEST(test_contract_order, z2_symmetry_matrix_matrix_both_bad_by_right) {
+   auto a = TAT::Tensor<double, TAT::Z2Symmetry>{{"A", "B"}, {{{false, 2}, {true, 2}}, {{false, 2}, {true, 2}}}}.range();
+   auto b = TAT::Tensor<double, TAT::Z2Symmetry>{{"C", "D"}, {{{false, 2}, {true, 2}}, {{false, 3}, {true, 3}}}}.range();
    auto c = TAT::Tensor<double, TAT::Z2Symmetry>::contract(a, b, {{"A", "C"}});
 }
 
